# ayon-cpp-dev-tools

./: .gitignore  .gitmodules  Build.py  CMakeInclude.txt  CMakeLists.txt  README.md
.github/workflows/: static.yml
Docs/src/: Doxyfile  generate.py
Docs/src/md/: Dev_Docs.md  Getting_Started.md  Versions.md  mainpage.md
Docs/src/md/name_space_info/: ynput_app.md  ynput_core.md  ynput_dt.md  ynput_lib.md  ynput_tool.md
src/NameSpaceDef/: definition.md  namespaces.hpp
src/lib/ynput/core/iostd/: envVarHelpers.hpp  env_var_helpers.hpp
src/lib/ynput/dt/instrumentation/: Instrumentor.h  InstrumentorMacros.h
src/lib/ynput/lib/logging/: AyonLogger.hpp
src/lib/ynput/tool/ayon/: rootHelpers.hpp
tests/: CMakeLists.txt
tests/src/: GBenchMain.cpp  GTestMain.cpp  bench_logging.cpp  test_logging.cpp
tests/src/dt/instrumentation/: bench_instrumentor.hpp  test_instrumentor.hpp
tests/src/lib/logging/: bench_logger.hpp  test_logger.hpp
